finished without any visible bugs.

--- a/Testimonials-Grid-Section/style.css
+++ b/Testimonials-Grid-Section/style.css
@@ -668,21 +668,6 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.my-12{
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
 .mr-4{
   margin-right: 1rem;
 }
@@ -795,16 +780,28 @@ video {
   min-height: 100vh;
 }
 
+.min-h-full{
+  min-height: 100%;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
 .w-8{
   width: 2rem;
+}
+
+.w-96{
+  width: 24rem;
 }
 
 .min-w-\[100vw\]{
   min-width: 100vw;
 }
 
-.max-w-sm{
-  max-width: 24rem;
+.min-w-full{
+  min-width: 100%;
 }
 
 .flex-shrink{
@@ -2443,10 +2440,6 @@ video {
     }
   }
 
-  .sm\:row-span-2{
-    grid-row: span 2 / span 2;
-  }
-
   .sm\:underline{
     text-decoration-line: underline;
   }
@@ -2457,99 +2450,8 @@ video {
     grid-column: span 2 / span 2;
   }
 
-  .md\:col-span-4{
-    grid-column: span 4 / span 4;
-  }
-
-  .md\:col-span-3{
-    grid-column: span 3 / span 3;
-  }
-
-  .md\:col-span-full{
-    grid-column: 1 / -1;
-  }
-
-  .md\:col-auto{
-    grid-column: auto;
-  }
-
-  .md\:col-span-1{
-    grid-column: span 1 / span 1;
-  }
-
-  .md\:col-start-3{
-    grid-column-start: 3;
-  }
-
-  .md\:col-start-1{
-    grid-column-start: 1;
-  }
-
-  .md\:col-end-3{
-    grid-column-end: 3;
-  }
-
-  .md\:col-end-1{
-    grid-column-end: 1;
-  }
-
-  .md\:col-end-2{
-    grid-column-end: 2;
-  }
-
-  .md\:row-span-2{
-    grid-row: span 2 / span 2;
-  }
-
-  .md\:row-span-4{
-    grid-row: span 4 / span 4;
-  }
-
-  .md\:row-start-3{
-    grid-row-start: 3;
-  }
-
-  .md\:row-end-3{
-    grid-row-end: 3;
-  }
-
-  .md\:my-20{
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-
-  .md\:block{
-    display: block;
-  }
-
-  .md\:grid{
-    display: grid;
-  }
-
-  .md\:grid-flow-row{
-    grid-auto-flow: row;
-  }
-
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .md\:grid-rows-3{
-    grid-template-rows: repeat(3, minmax(0, 1fr));
-  }
-
-  .md\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .md\:px-12{
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .md\:px-16{
@@ -2560,11 +2462,6 @@ video {
   .md\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
-  }
-
-  .md\:px-20{
-    padding-left: 5rem;
-    padding-right: 5rem;
   }
 }
 
@@ -2577,6 +2474,26 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:right-12{
+    right: 3rem;
+  }
+
+  .xl\:right-16{
+    right: 4rem;
+  }
+
+  .xl\:right-20{
+    right: 5rem;
+  }
+
+  .xl\:right-32{
+    right: 8rem;
+  }
+
+  .xl\:right-24{
+    right: 6rem;
+  }
+
   .xl\:col-span-2{
     grid-column: span 2 / span 2;
   }
@@ -2585,8 +2502,16 @@ video {
     grid-column-start: 4;
   }
 
+  .xl\:col-start-1{
+    grid-column-start: 1;
+  }
+
   .xl\:col-start-3{
     grid-column-start: 3;
+  }
+
+  .xl\:col-end-4{
+    grid-column-end: 4;
   }
 
   .xl\:row-span-2{
@@ -2597,35 +2522,87 @@ video {
     grid-row-start: 4;
   }
 
+  .xl\:row-start-2{
+    grid-row-start: 2;
+  }
+
   .xl\:row-start-1{
     grid-row-start: 1;
   }
 
-  .xl\:row-start-3{
-    grid-row-start: 3;
+  .xl\:row-end-7{
+    grid-row-end: 7;
   }
 
-  .xl\:row-end-3{
-    grid-row-end: 3;
-  }
-
-  .xl\:row-end-6{
-    grid-row-end: 6;
-  }
-
-  .xl\:grid-flow-row{
-    grid-auto-flow: row;
+  .xl\:row-end-2{
+    grid-row-end: 2;
   }
 
   .xl\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .xl\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .xl\:grid-rows-2{
     grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:px-11{
+    padding-left: 2.75rem;
+    padding-right: 2.75rem;
+  }
+
+  .xl\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .xl\:px-14{
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .xl\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .xl\:px-24{
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .xl\:px-20{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .xl\:px-\[72px\]{
+    padding-left: 72px;
+    padding-right: 72px;
+  }
+
+  .xl\:px-\[74px\]{
+    padding-left: 74px;
+    padding-right: 74px;
+  }
+
+  .xl\:px-\[75px\]{
+    padding-left: 75px;
+    padding-right: 75px;
+  }
+
+  .xl\:px-\[76px\]{
+    padding-left: 76px;
+    padding-right: 76px;
+  }
+
+  .xl\:px-\[78px\]{
+    padding-left: 78px;
+    padding-right: 78px;
+  }
+
+  .xl\:px-\[82px\]{
+    padding-left: 82px;
+    padding-right: 82px;
   }
 }
